# FloatPad

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  TODO.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.scripts.json  tsconfig.web.json  vite.config.tauri.ts
resources/: icon.icns
scripts/: create-icons.ts  debug.ts  verify.ts
spec/: todo.md
specs/: inital_spec.md  phase0-analysis.md  tauri-impliment.md  todo.md
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/main/: index.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: calculator.ts  global.d.ts  main.ts  memo.ts  settings.ts  snippets.ts  style.css  tauri-bridge.ts  terminal.ts  webviewer.ts
